# SIFT

./: .gitignore  CMakeLists.txt  README.md  create.sh  features_compute  main  plot_graphs.py  results.yaml  results_gonzalez.yaml
src/: example_code.cpp  main.cpp  main2.cpp
src/features_compute/: CMakeLists.txt  features_compute.cpp
src/features_compute/include/: ObjectDetection.cpp  ObjectDetection.h
src/include/: ObjectDetection.cpp  ObjectDetection.h
src/main/: CMakeLists.txt  main.cpp
src/main/include/: FeatureMatch.cpp  FeatureMatch.h
