set (CMAKE_CXX_STANDARD 11)
cmake_minimum_required(VERSION 2.8)
project( features_compute )
find_package( OpenCV REQUIRED )
include_directories(${OpenCV_INCLUDE_DIRS})
add_executable( ${PROJECT_NAME} ${PROJECT_NAME}.cpp include/ObjectDetection.h include/ObjectDetection.cpp)
target_link_libraries( ${PROJECT_NAME} ${OpenCV_LIBS} )
